# graft

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  pytest.ini
docs/: synapse.md
graft/: __main__.py
graft/ingest/: dgraph.py
graft/tools/: schema.py
graft/translate/: synapse.py  utils.py
scripts/: start_dgraph.sh
